--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,11 @@
         />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="../src/css/custom.css" />
+   
+    <link rel="stylesheet" href="../src/App.css" />
+
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/8b2ee88838.js" crossorigin="anonymous"></script>
    
     <title>React App</title>
   </head>
